Upload de imagem para o Firebase

--- a/views/produtos.handlebars
+++ b/views/produtos.handlebars
@@ -21,6 +21,7 @@
   <div class="table-responsive">
   <table class="table">
     <thead>
+      <th></th>
       <th>Nome</th>
       <th>Preço</th>
       <th>Descrição</th>
@@ -30,6 +31,17 @@
     <tbody>
       {{#each produtos}}
         <tr>
+          <td>
+            {{#if this.image}}
+                <img src="{{this.image}}" alt="Product image" width="72" />
+              {{else}}
+                <img
+                  src="https://rafaturis.com.br/wp-content/uploads/2014/01/default-placeholder.png"
+                  alt="Placeholder"
+                  width="72"
+                />
+              {{/if}}
+          </td>
           <td>{{this.name}}</td>
           <td>{{this.price}}</td>
           <td>{{this.description}}</td>
