--- a/views/add_produto.handlebars
+++ b/views/add_produto.handlebars
@@ -1,7 +1,7 @@
 <div class="m-1">
   <h2>Adicionar produto</h2>
 <hr />
-<form action="/produtos/enviar" method="POST">
+<form action="/produtos/enviar" method="POST" enctype="multipart/form-data">
   <div class="form-group">
     <label for="name">Nome*</label>
     <input type="text" name="name" id="name" class="form-control" required />
@@ -36,6 +36,10 @@
       class="form-control"
       required
     />
+  </div>
+  <div class="form-group">
+    <label for="image">Imagem do produto*</label>
+    <input type="file" name="image" id="image" class="form-control">
   </div>
   <button class="btn btn-dark mt-2">Criar</button>
 </form>
