--- a/views/editar_produto.handlebars
+++ b/views/editar_produto.handlebars
@@ -1,7 +1,7 @@
 <div class="m-1">
   <h2>Editar produto</h2>
 <hr />
-<form action="/produtos/atualizar" method="POST"> 
+<form action="/produtos/atualizar" method="POST" enctype="multipart/form-data"> 
 <input type="hidden" name="id" value="{{produto._id}}">
   <div class="form-group">
     <label for="name">Nome*</label>
@@ -45,6 +45,10 @@
       value="{{produto.quantity}}"
       required
     />
+  </div>
+  <div class="form-group">
+    <label for="image">Imagem do produto*</label>
+    <input type="file" name="image" id="image" class="form-control">
   </div>
   <button class="btn btn-dark mt-2">Atualizar</button>
 </form>
